Fixed icon spacing in asks

--- a/discord-theme.css
+++ b/discord-theme.css
@@ -570,7 +570,7 @@ p.npf_quote {
 	row-gap: 0.25em;
 }
 .boxquote.ask .asked { color: var(--text-muted); }
-.boxquote.ask > img { grid-column: 2; grid-row: 1 / span 2; }
+.boxquote.ask > img { grid-column: 2; grid-row: 1 / span 2; margin: 0 }
 .boxquote.ask p, .boxquote.ask div { font-size: 0.95em; }
 .boxquote,
 .npf-link-block > a,
